<resources>
    <string name="app_name">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="todo">g1</string>

    <string name="Mulai">MULAI</string>
    <string name="kode">kd</string>
    <string name="komen">Silahkan Masukkan Nomor Telepon Anda Dengan Benar</string>
    <string name="Login">Login</string>

    <string name="start_messaging">MULAI</string>
    <string name="chatgram">CHATGRAM</string>
    <string name="Search">Search</string>
    <string name="menuchat">Chat</string>
    <string name="menukontak">Kontak</string>
    <string name="about">About</string>
    <string name="Chat">Chat</string>
    <string name="Kontak">Kontak</string>
    <string name="About">About</string>
</resources>
